--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json"
+    "packagr": "npx ng-packagr -p ng-package.json"
   },
   "private": false,
   "repository": {
@@ -52,7 +52,6 @@
     "core-js": ">=2.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.2",
     "@angular/animations": "^9",
     "@angular/cdk": "^9",
     "@angular/cli": "^9",
@@ -61,7 +60,6 @@
     "@angular/compiler-cli": "^9",
     "@angular/core": "^9",
     "@angular/forms": "^9",
-    "@angular/http": "^9",
     "@angular/language-service": "^9",
     "@angular/material": "^9",
     "@angular/platform-browser": "^9",
